# Minecraft_Mod_Translate_tool

./: .env.example  .gitignore  AGENTS.md  BEFORE_AFTER_COMPARISON.md  IMPLEMENTATION_COMPLETE.md  OPENROUTER_IMPLEMENTATION.md  README.md  README_REFACTORED.md  config_module.py  file_utils.py  gui_module.py  habit.md  main.py  ollama_config.json  pyproject.toml  pytest.ini  requirements.txt  rules.md  search_files.py  translatertest.py  translation_module.py
.claude/: settings.local.json
.github/: RELEASE.md  copilot-instructions.md
.github/workflows/: main.yml
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
docs/: MIGRATION_GUIDE.md  OPENROUTER_FREE_MODELS.md
docs/superpowers/plans/: 2026-03-15-ollama-settings-json.md
docs/superpowers/specs/: 2026-03-15-ollama-settings-json-design.md
packaging/: flet-desktop.nuitka-package.config.yml
skills/openrouter-translation-maintenance/: SKILL.md
skills/openrouter-translation-maintenance/agents/: openai.yaml
skills/openrouter-translation-maintenance/references/: change-checklist.md  current-architecture.md  workflows.md
src/: __init__.py  main.py
src/core/: file_manager.py  ollama_api.py  openrouter_api.py  resource_pack.py  translator.py
src/ui/: app.py  components.py  styles.py
src/utils/: config.py  exceptions.py  logging.py  system.py
test/: test_config_module.py
tests/: test_config.py  test_config_module.py  test_file_utils.py  test_gui_module.py  test_main.py  test_ollama_api.py  test_search_files.py  test_translation_module.py  test_translator.py
translate_rp/: pack.mcmeta
translate_rp/assets/appleskin/lang/: ja_jp.json
