[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft-mod-translate-tool"
version = "0.8.0"
description = "A tool to easily translate Minecraft Java Edition MOD language files"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Maji", email = "137805118+Maji3429@users.noreply.github.com"}
]
keywords = ["minecraft", "mod", "translation", "resource-pack"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "arrow==1.3.0",
    "beautifulsoup4==4.13.4",
    "binaryornot==0.4.4",
    "certifi==2025.4.26",
    "chardet==3.0.4",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "colorama==0.4.6",
    "cookiecutter==2.6.0",
    "deep-translator==1.11.4",
    "fastapi==0.115.12",
    "flet==0.28.2",
    "flet-cli==0.28.2",
    "flet-desktop==0.28.2",
    "flet-web==0.28.2",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "hstspreload==2025.1.1",
    "httpcore==0.15.0",
    "httptools==0.6.4",
    "httpx==0.23.0",
    "hyperframe==6.1.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "logger==1.4",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "nuitka==2.7.2",
    "oauthlib==3.2.2",
    "ordered-set==4.1.0",
    "packaging==25.0",
    "plyer==2.1.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pygments==2.19.1",
    "pyperclip==1.9.0",
    "pypng==0.20220715.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-slugify==8.0.4",
    "pyyaml==6.0.2",
    "qrcode==7.4.2",
    "repath==0.9.0",
    "requests==2.32.4",
    "rfc3986==1.5.0",
    "rich==14.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "starlette==0.49.1",
    "text-unidecode==1.3",
    "toml==0.10.2",
    "tqdm==4.67.1",
    "types-python-dateutil==2.9.0.20250516",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.6.3",
    "uvicorn==0.34.2",
    "watchdog==4.0.2",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
    "zstandard==0.23.0",
]

[project.urls]
Homepage = "https://github.com/Maji3429/Minecraft_Mod_Translate_tool"
Repository = "https://github.com/Maji3429/Minecraft_Mod_Translate_tool"
Issues = "https://github.com/Maji3429/Minecraft_Mod_Translate_tool/issues"

[project.scripts]
minecraft-mod-translate = "src.main:main"
